--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
     <title>Data Monitoring</title>
-    <meta
-      name="description"
-      content="Welkom bij Data monitoring"
-    />
+    <meta name="description" content="Welkom bij Data monitoring" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
 
