--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
-    <title>Data Monitoring</title>
+    <title>Data Monitoring Tool</title>
     <meta name="description" content="Welkom bij Data monitoring" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
